# model_error_uq_plasma

./: .bashrc  .gitignore  .gitmodules  Manifest.toml  README.md  extract_metrics.jl  notes  notes.txt  pyproject.toml  requirements.txt  run.bat  run.py
MCMCIterators/: samplers.py
hall_opt/: Manifest.toml  Project.toml  b.py  generate_truth_data.py  ground_truth.json  ground_truth_2.0.json  last_10_sim.py  main.py  map.py  map_and_mcmc_plot.py  map_nelder_mead.py  mcmc.py  mcmc_comparison_plots.py  mcmc_config.json  mcmc_plot.py  mcmc_utils.py  mcmc_with_checks.py  optimized_solution_2.0.json  output.json  output_twozonebohm.json  parameter_log.json  posterior.py  sampler_path_check.py  save_test.py  visualization_adapted.py
hallthruster_tutorial/: Manifest.toml
map-ink/: ion_velocity_weight_plots.py  loss_values_w_0_1.json  loss_values_w_10_0.json  loss_values_w_1_0.json  loss_values_w_2_0.json  loss_values_w_3_0.json  loss_values_w_5_0.json  map_ink.py  plot_residuals_w3.py  w_0_1_map_iteration_results.json  w_10_0_map_iteration_results.json  w_1_0_map_iteration_results.json  w_2_0_map_iteration_results.json  w_3_0_map_iteration_results.json  w_5_0_map_iteration_results.json  w_plots.py
mapOpt/: best_initial_guess_w_1_0.json  best_initial_guess_w_2_0.json  full_data_plots.py  ion_v_w.py  ion_velocity_weight_plots.py  loss_comparison_plots.py  map_ink.py  plot_residuals_w3.py  residuals_plots_map.py
map_results/: final_map_params.json
mcmc-results-1/: checkpoint_1.csv
mcmc-results-11-21-24/: mcmc_samples_w_2.0_all_samples_7.csv  mcmc_samples_w_2.0_status_2.txt  mcmc_samples_w_2.0_status_3.txt  mcmc_samples_w_2.0_status_4.txt
mcmc-results-11-22-24/: final_mcmc_samples_w_2.0_1.csv  mcmc_samples_w_2.0_checkpoint.csv
mcmc-results-11-23-24/: _1.json  _2.json  final_mcmc_samples_w_2.0_2.csv  final_mcmc_samples_w_2.0_3.csv  mcmc_samples_w_2.0_checkpoint_2.csv  mcmc_samples_w_2.0_checkpoint_3.csv  mcmc_samples_w_2.0_checkpoint_4.csv
mcmc-results-11-23-24(2)/: _1.json  _3.json  _4.json  _5.json  mcmc_samples_w_2.0_checkpoint_5.csv  mcmc_samples_w_2.0_final_samples_3.csv  mcmc_samples_w_2.0_final_status_5.txt
mcmc-results-11-24-2-24/: _1.json  final_mcmc_samples_2_w_2.0_1.csv
mcmc-results-11-24-24/: _10.json  _4.json  _5.json  _9.json  final_mcmc_samples_w_2.0_1.csv  final_mcmc_samples_w_2.0_12.csv  final_mcmc_samples_w_2.0_2.csv  final_mcmc_samples_w_2.0_4.csv  final_mcmc_samples_w_2.0_5.csv  final_mcmc_samples_w_2.0_9.csv
mcmc-results-11-25-24/: _1.json  final_mcmc_samples_2_w_2.0_1.csv  mcmc_metrics_1.json  mcmc_w_2.0_initial_mcmc.json
mcmc-results-11-25-24-sl/: _1.json  _2.json  _3.json  final_mcmc_samples_2_w_2.0_1.csv  final_mcmc_samples_2_w_2.0_2.csv  final_mcmc_samples_2_w_2.0_3.csv
mcmc-results-2/: checkpoint_1.csv  final_samples_1.csv
mcmc-results-3/: checkpoint_1.csv  final_samples_1.csv
mcmc-results-4/: checkpoint_1.csv  final_samples_1.csv
mcmc-results-5/: checkpoint_1.csv  final_samples_1.csv
mcmc-results-6/: checkpoint_1.csv  final_samples_1.csv
mcmc-results-7/: checkpoint_1.csv  (+1 more)
misc/: mcmc_table.py  (+1 more)
(+3099 files in other folders)
