[project]
name = "model_error_uq_plasma"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "elida", email = ""},
    {name = "", email = ""},
]
dependencies = [
    "matplotlib>=3.10.0",
    "juliacall>=0.9.24",
    "scipy>=1.15.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "arviz>=0.20.0",
    "logging>=0.4.9.6",
    "datetime>=5.5",
    "nolds>=0.6.1",
    "MCMCIterators @ git+https://github.com/goroda/MCMCIterators.git",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "logger>=1.4",
    "anyio>=4.8.0",
    "blinker>=1.9.0",
    "certifi>=2024.12.14",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "dep-logic>=0.4.10",
    "distlib>=0.3.9",
    "filelock>=3.17.0",
    "findpython>=0.6.2",
    "fonttools>=4.55.6",
    "h11>=0.14.0",
    "hishel>=0.1.1",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "installer>=0.7.0",
    "juliacall>=0.9.24",
    "juliapkg>=0.1.15",
    "kiwisolver>=1.4.8",
    "markdown-it-py>=3.0.0",
    "matplotlib>=3.10.0",
    "mdurl>=0.1.2",
    "msgpack>=1.1.0",
    "numpy>=2.2.2",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pbs-installer>=2025.1.6",
    "pdm>=2.22.3",
    "pillow>=11.1.0",
    "platformdirs>=4.3.6",
    "Pygments>=2.19.1",
    "pyparsing>=3.2.1",
    "pyproject-hooks>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "pytz>=2024.2",
    "resolvelib>=1.1.0",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "semver>=3.0.4",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "socksio>=1.0.0",
    "tomlkit>=0.13.2",
    "truststore>=0.10.0",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.1",
    "unearth>=0.17.2",
    "virtualenv>=20.29.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
